rns-lang/tests/snapshots/lexer-directives-dot_public.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.public static HelloWorld
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/lexer/directives/dot_public.ja:1:1 ]
   │
 1 │ .public static HelloWorld
   │ ───┬───  
   │    ╰───── Unknown directive '.public'
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code
───╯
